2009-02-19  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r54] src/main.c: Added include <locale.h> for LC_ALL constant.

	* [r54] ChangeLog, NEWS: Updated.

2008-11-19  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r52] src/main.c: Removed compile warnings.

2008-05-01  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r49] configure.ac: Add AC_PROG_CC_C99 and set -pedantic compiler flag.

2008-04-09  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r47] src/dvdbackup.c:
	  - (DVDCopyIfoBup) removed gotos
	  - (uniq) removed
	  - (DVDDisplayInfo) Added human readable output of file sizes.

	* [r47] src/dvdbackup.c, src/dvdbackup.h, src/main.c: converted spaces to
	  tabs

2008-04-08  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r45] src/dvdbackup.c:
	  - Removed DVDMirrorVMG. Use DVDMirrorTitleX with title set 0 instead.
	  - Renamed DVDCopyTileVobX to DVDCopyTitleVobX.
	  - Added DVDCopyBlocks for DVDCopyTitleVobX and DVDCopyMenu.

2008-04-02  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r43] src/dvdbackup.c (DVDGetFileSet):
	  - fixed typo
	  - added more verbose output

2008-03-24  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r40] src/dvdbackup.c: Changed type of file sizes from int to off_t 

	* [r39] src/dvdbackup.c (DVDCopyMenu): changed invalid DVD size error to
	  warning

	* [r38] src/dvdbackup.c:
	  - (DVDGetFileSet): Cleanup.
	  - Replaced 2048 with DVD_VIDEO_LB_LEN (defined in dvdread/dvd_reader.h)
	  - created constant BUFFER_SIZE
	  - replaced vobsize with MAX_VOB_SIZE

	* [r37] src/dvdbackup.c (DVDCopyMenu): Error messages prints filename.

2008-03-20  Benjamin Drung  <benjamin.drung@gmail.com>

	* [r33] configure.ac, NEWS, po/dvdbackup.pot: Released version 0.2

2008-03-20  Stephen Gran  <sgran@debian.org>

	* [r32] debian/rules: switch to running make install with DESTDIR set,
           and then install from there.

	* [r31] debian/rules build changes for new autoconf system

	* [r30] Change footer on manpage - now part of main tarball
