@@ -1,5 +1,10 @@
 2009-02-19  Benjamin Drung  <benjamin.drung@gmail.com>
 
+	* [r55] INSTALL: Updated to newest version from autoconf.
+
+	* [r55] src/dvdbackup.c, src/dvdbackup.h, src/main.c: Updated year in
+	  copyright.
+
 	* [r54] src/main.c: Added include <locale.h> for LC_ALL constant.
 
 	* [r54] ChangeLog, NEWS: Updated.
